--- a/dummyproject/test-output/index.html
+++ b/dummyproject/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Koushik\AppData\Local\Temp\testng-eclipse--210951851\testng-customsuite.xml</span>
+                    <span>C:\Users\Koushik\AppData\Local\Temp\testng-eclipse--1983335974\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="dummyproject.DDemo2" class="method navigator-link" hash-for-method="practisceTest3">practisceTest3</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="dummyproject.DDemo2" class="method navigator-link" hash-for-method="practisceTest6">practisceTest6</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="dummyproject.DDemo1" class="method navigator-link" hash-for-method="practisceTest1">practisceTest1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,21 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">dummyproject.DDemo2</span>
+              <span class="class-name">dummyproject.DDemo1</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="practisceTest3">
-                  </a> <!-- practisceTest3 -->
-                  <span class="method-name">practisceTest3</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="practisceTest6">
-                  </a> <!-- practisceTest6 -->
-                  <span class="method-name">practisceTest6</span>
+                  <a name="practisceTest1">
+                  </a> <!-- practisceTest1 -->
+                  <span class="method-name">practisceTest1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Koushik\AppData\Local\Temp\testng-eclipse--210951851\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Koushik\AppData\Local\Temp\testng-eclipse--1983335974\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;dummyproject.DDemo2&quot;/&gt;
+      &lt;class name=&quot;dummyproject.DDemo1&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,15 +186,11 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'practisceTest3')
-data.setCell(0, 2, 'dummyproject.DDemo2')
-data.setCell(0, 3, 8);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'practisceTest6')
-data.setCell(1, 2, 'dummyproject.DDemo2')
-data.setCell(1, 3, 1);
+data.setCell(0, 1, 'practisceTest1')
+data.setCell(0, 2, 'dummyproject.DDemo1')
+data.setCell(0, 3, 9);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -237,14 +221,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">dummyproject.DDemo2</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">dummyproject.DDemo1</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">practisceTest3</span>
+                <span class="method-name">practisceTest1</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">practisceTest6</span>
-                <span class="method-start">11 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
